cmake_minimum_required (VERSION 2.6) 
project (goagent-client)
find_package (Threads)
find_package(OpenSSL REQUIRED)

ENABLE_TESTING()

INCLUDE (CheckIncludeFiles)
INCLUDE (CheckTypeSize)

CHECK_INCLUDE_FILES(fcntl.h _EVENT_HAVE_FCNTL_H)
CHECK_INCLUDE_FILES(stdarg.h _EVENT_HAVE_STDARG_H)
CHECK_INCLUDE_FILES(inttypes.h _EVENT_HAVE_INTTYPES_H)
CHECK_INCLUDE_FILES(stdint.h _EVENT_HAVE_STDINT_H)
CHECK_INCLUDE_FILES(stddef.h _EVENT_HAVE_STDDEF_H)
CHECK_INCLUDE_FILES(poll.h _EVENT_HAVE_POLL_H)
CHECK_INCLUDE_FILES(unistd.h _EVENT_HAVE_UNISTD_H)
CHECK_INCLUDE_FILES(sys/epoll.h _EVENT_HAVE_SYS_EPOLL_H)
CHECK_INCLUDE_FILES(sys/time.h _EVENT_HAVE_SYS_TIME_H)
CHECK_INCLUDE_FILES(sys/queue.h _EVENT_HAVE_SYS_QUEUE_H)
CHECK_INCLUDE_FILES(sys/event.h _EVENT_HAVE_SYS_EVENT_H)
CHECK_INCLUDE_FILES(sys/param.h _EVENT_HAVE_SYS_PARAM_H)
CHECK_INCLUDE_FILES(sys/ioctl.h _EVENT_HAVE_SYS_IOCTL_H)
CHECK_INCLUDE_FILES(sys/select.h _EVENT_HAVE_SYS_SELECT_H)
CHECK_INCLUDE_FILES(sys/devpoll.h _EVENT_HAVE_SYS_DEVPOLL_H)
CHECK_INCLUDE_FILES(port.h _EVENT_HAVE_PORT_H)
CHECK_INCLUDE_FILES(netinet/in.h _EVENT_HAVE_NETINET_IN_H)
CHECK_INCLUDE_FILES(netinet/in6.h _EVENT_HAVE_NETINET_IN6_H)
CHECK_INCLUDE_FILES(sys/socket.h _EVENT_HAVE_SYS_SOCKET_H)
CHECK_INCLUDE_FILES(sys/uio.h _EVENT_HAVE_SYS_UIO_H)
CHECK_INCLUDE_FILES(arpa/inet.h _EVENT_HAVE_ARPA_INET_H)
CHECK_INCLUDE_FILES(sys/eventfd.h _EVENT_HAVE_SYS_EVENTFD_H)
CHECK_INCLUDE_FILES(sys/mman.h _EVENT_HAVE_SYS_MMAN_H)
CHECK_INCLUDE_FILES(sys/sendfile.h _EVENT_HAVE_SYS_SENDFILE_H)
CHECK_INCLUDE_FILES(sys/wait.h _EVENT_HAVE_SYS_WAIT_H)
CHECK_INCLUDE_FILES(netdb.h _EVENT_HAVE_NETDB_H)
CHECK_INCLUDE_FILES(sys/stat.h _EVENT_HAVE_SYS_STAT_H)
CHECK_INCLUDE_FILES(sys/sysctl.h _EVENT_HAVE_SYS_SYSCTL_H)

#AC_CHECK_FUNCS([gettimeofday vasprintf fcntl clock_gettime strtok_r strsep])
#AC_CHECK_FUNCS([getnameinfo strlcpy inet_ntop inet_pton signal sigaction strtoll inet_aton pipe eventfd sendfile mmap splice arc4random arc4random_buf issetugid geteuid getegid getprotobynumber setenv unsetenv putenv sysctl])
#AC_CHECK_FUNCS([umask])


 
SET(CMAKE_EXTRA_INCLUDE_FILES stdint.h)
CHECK_TYPE_SIZE(uint64_t _EVENT_HAVE_UINT64_T)
CHECK_TYPE_SIZE(uint32_t _EVENT_HAVE_UINT32_T)
CHECK_TYPE_SIZE(uint16_t _EVENT_HAVE_UINT16_T)
CHECK_TYPE_SIZE(uint8_t _EVENT_HAVE_UINT8_T)
CHECK_TYPE_SIZE(uintptr_t _EVENT_HAVE_UINTPTR_T)
CHECK_TYPE_SIZE(size_t _EVENT_SIZEOF_SIZE_T)

SET(CMAKE_EXTRA_INCLUDE_FILES)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)




ADD_SUBDIRECTORY(libevent)
#ADD_SUBDIRECTORY(gtest)
ADD_SUBDIRECTORY(src)
